fix: overflow-x hidden and keep scrolling in y axis

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -81,13 +81,14 @@
   box-sizing: border-box;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
+  overflow-y: visible;
 }
 
 html,
 body {
   max-width: 100vw;
   font-family: "Alexandria", sans-serif;
-  overflow: auto;
 }
 
 * {
